add initial layout

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <html>
   <head>
     <title>
-      Users management
+      Simple crafts
     </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
   <body>
     <div id="app"></div>
   </body>
 </html>
+<!-- <div>
+  TODO: 
+  1/ Styles 
+  2/ SEO
+  3/ Profile page
+  4/ Concepts to master for web developers
+  5/ links to social media
+</div> -->
