--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <html>
-  <head>
-    <title>
-      Simple crafts
-    </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+
+<head>
+  <title>
+    Simple crafts
+  </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <style>
+    body {
+      font-size: 14px;
+      font-family: Nunito, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-weight: 400;
+      line-height: 1.5;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="app"></div>
+</body>
+
 </html>
 <!-- <div>
   TODO: 
