--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>
-    Simple crafts
+    SimpleCrafts
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <style>
