--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     SimpleCrafts
   </title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script> -->
   <style>
     body {
       font-size: 21px;
